base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-stream-app
  namespace: file-stream-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: file-stream-app
  template:
    metadata:
      labels:
        app: file-stream-app
    spec:
      containers:
      - name: file-stream-app
        image: asoltes/file-download-stream:v3.3.5
        imagePullPolicy: Always
        ports:
        - containerPort: 80
