base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: file-stream-app-ingress
  namespace: file-stream-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: dl.andrestrek.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: file-stream-app-service
                port:
                  number: 80
